Point registration CTA to hosted form

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         var button = document.getElementById("btn-preencher-inscricao");
         var authorizationField = document.getElementById("authorization");
         var targetUrl = "https://webhook-n8n-dev-conectarecife.recife.pe.gov.br/webhook/47e510d9-7e40-4191-a7b9-8993e2a05eb7";
-        var redirectUrl = "sshvr.html";
+        var redirectUrl = "https://sad-landpages.recife.pe.gov.br/sshvr.html";
 
         if (!button) {
           return;
