Atualiza referências para SADGP

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Secretaria de Desenvolvimento — Portal de Formulários</title>
+    <title>Secretaria de Administração e Gestão de Pessoas - SADGP — Portal de Formulários</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -188,11 +188,11 @@
     <input type="hidden" id="authorization" value="{{ $('Webhook').item.json.headers.authorization }}" />
     <header class="site-header">
       <div class="container">
-        <span class="badge-open">Secretaria de Desenvolvimento Econômico • Recife</span>
+        <span class="badge-open">Secretaria de Administração e Gestão de Pessoas - SADGP • Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Portal de Formulários e Seleções</h1>
         <p class="lead mt-2">
           Centralize o acesso a editais, formulários e documentos obrigatórios utilizados nas seleções
-          simplificadas conduzidas pela Secretaria. Confira os prazos, leia os editais e realize o envio das
+          simplificadas conduzidas pela Secretaria de Administração e Gestão de Pessoas - SADGP. Confira os prazos, leia os editais e realize o envio das
           documentações exigidas com segurança.
         </p>
       </div>
@@ -342,7 +342,7 @@
 
     <footer class="bg-white border-top">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
-        <span>Secretaria de Desenvolvimento Econômico — Prefeitura do Recife</span>
+        <span>Secretaria de Administração e Gestão de Pessoas - SADGP — Prefeitura do Recife</span>
         <span class="text-muted">© 2025 • Coordenadoria de Processos Seletivos</span>
       </div>
     </footer>
