--- a/index.html
+++ b/index.html
@@ -54,10 +54,22 @@
       }
 
       .user-greeting {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
         font-size: 1.05rem;
-        font-weight: 500;
-        margin-bottom: 0.75rem;
-        color: rgba(255, 255, 255, 0.92);
+        font-weight: 600;
+        margin-bottom: 2rem;
+        padding: 1rem 1.5rem;
+        border-radius: 1rem;
+        background: linear-gradient(135deg, rgba(0, 83, 164, 0.09), rgba(0, 163, 255, 0.12));
+        color: var(--text-strong);
+        box-shadow: 0 10px 30px rgba(0, 45, 98, 0.08);
+      }
+
+      .user-greeting::before {
+        content: "👋";
+        font-size: 1.4rem;
       }
 
       .section-title {
@@ -195,7 +207,6 @@
     <input type="hidden" id="authorization" value="{{ $('Webhook').item.json.headers.authorization }}" />
     <header class="site-header">
       <div class="container">
-        <p class="user-greeting">Olá, {{ $json.given_name }}! Que bom ter você aqui.</p>
         <span class="badge-open">Secretaria de Administração e Gestão de Pessoas - SADGP • Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Portal de Formulários e Seleções</h1>
         <p class="lead mt-2">
@@ -207,6 +218,7 @@
     </header>
 
     <main class="container my-5">
+      <p class="user-greeting">Olá, {{ $json.given_name }}! Que bom ter você aqui.</p>
       <section class="mb-5">
         <div class="d-flex flex-wrap justify-content-between align-items-start gap-3 mb-4">
           <h2 class="section-title mb-0">Inscrições em andamento</h2>
