--- a/formlayout.html
+++ b/formlayout.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Seleção Simplificada — Formulário</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
       :root {
@@ -169,6 +175,7 @@
       }
 
       .wizard-index {
+        position: relative;
         display: inline-flex;
         width: 40px;
         height: 40px;
@@ -181,6 +188,12 @@
         z-index: 1;
         border: 2px solid transparent;
         transition: all 0.2s ease;
+        overflow: hidden;
+      }
+
+      .wizard-index-label {
+        position: relative;
+        z-index: 2;
       }
 
       .wizard-label {
@@ -200,6 +213,19 @@
         color: #ffffff;
         border-color: #198754;
         box-shadow: 0 0 0 4px rgba(25, 135, 84, 0.15);
+      }
+
+      .wizard-step.completed .wizard-index::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 8px;
+        right: 8px;
+        height: 2px;
+        border-radius: 999px;
+        background: rgba(255, 255, 255, 0.85);
+        transform: translateY(-50%);
+        z-index: 1;
       }
 
       .wizard-step.active::before,
@@ -433,23 +459,23 @@
         <h2 class="wizard-heading">Etapas da inscrição</h2>
         <ol class="wizard-steps" id="wizardSteps" role="tablist">
           <li class="wizard-step active" data-step="0" role="tab" aria-selected="true" tabindex="0">
-            <span class="wizard-index">1</span>
+            <span class="wizard-index"><span class="wizard-index-label" data-step-index="1">1</span></span>
             <span class="wizard-label">Dados pessoais</span>
           </li>
           <li class="wizard-step" data-step="1" role="tab" aria-selected="false" tabindex="-1">
-            <span class="wizard-index">2</span>
+            <span class="wizard-index"><span class="wizard-index-label" data-step-index="2">2</span></span>
             <span class="wizard-label">Endereço e contato</span>
           </li>
           <li class="wizard-step" data-step="2" role="tab" aria-selected="false" tabindex="-1">
-            <span class="wizard-index">3</span>
+            <span class="wizard-index"><span class="wizard-index-label" data-step-index="3">3</span></span>
             <span class="wizard-label">Perfil profissional</span>
           </li>
           <li class="wizard-step" data-step="3" role="tab" aria-selected="false" tabindex="-1">
-            <span class="wizard-index">4</span>
+            <span class="wizard-index"><span class="wizard-index-label" data-step-index="4">4</span></span>
             <span class="wizard-label">Documentos</span>
           </li>
           <li class="wizard-step" data-step="4" role="tab" aria-selected="false" tabindex="-1">
-            <span class="wizard-index">5</span>
+            <span class="wizard-index"><span class="wizard-index-label" data-step-index="5">5</span></span>
             <span class="wizard-label">Revisão</span>
           </li>
         </ol>
@@ -1429,9 +1455,10 @@
           step.classList.toggle('completed', i < currentStep);
           step.setAttribute('aria-selected', i === currentStep ? 'true' : 'false');
           step.setAttribute('tabindex', i === currentStep ? '0' : '-1');
-          const indexEl = step.querySelector('.wizard-index');
-          if (indexEl) {
-            indexEl.textContent = i < currentStep ? '✓' : String(i + 1);
+          const indexLabel = step.querySelector('.wizard-index-label');
+          if (indexLabel) {
+            const original = indexLabel.dataset.stepIndex || String(i + 1);
+            indexLabel.textContent = i < currentStep ? '✓' : original;
           }
         });
         if (currentStep === stepPanels.length - 1) {
@@ -1900,6 +1927,7 @@
       updatePCD();
       updateNecessidade();
       updatePPNI();
+      handleCepInput();
       showStep(0);
     </script>
   </body>
