Refine hero banner rendering

--- a/formlayout.html
+++ b/formlayout.html
@@ -51,6 +51,8 @@
         position: relative;
         height: 240px;
         overflow: hidden;
+        background: url("https://statics.recife.pe.gov.br/images/dynamics/zonaazul/banner.jpeg")
+          center/cover no-repeat;
         background-color: #0b2447;
       }
 
@@ -59,18 +61,6 @@
         position: absolute;
         inset: 0;
         background: linear-gradient(180deg, rgba(11, 36, 71, 0.55) 0%, rgba(11, 36, 71, 0.35) 70%, rgba(11, 36, 71, 0.15) 100%);
-      }
-
-      .hero-image {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        min-width: 100%;
-        min-height: 100%;
-        width: auto;
-        height: auto;
-        transform: translate(-50%, -50%);
-        object-fit: cover;
       }
 
       header.hero .hero-content {
@@ -617,11 +607,6 @@
   </head>
   <body>
     <header class="hero">
-      <img
-        src="https://statics.recife.pe.gov.br/images/dynamics/zonaazul/banner.jpeg"
-        alt="Hospital Veterinário do Recife"
-        class="hero-image"
-      />
       <div class="hero-content">
         <span class="hero-badge">Secretaria de Administração e Gestão de Pessoas</span>
         <h1 class="hero-title">Seleção Simplificada — Hospital Veterinário do Recife</h1>
