--- a/formlayout.html
+++ b/formlayout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Seleção Simplificada — Formulário</title>
+    <title>Seleção Simplificada — Hospital Veterinário do Recife | Inscrição</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -661,6 +661,12 @@
           id="initialAuthorization"
           name="authorization"
           value="{{ String($json.authorization ?? $json.Authorization ?? '') }}"
+        />
+        <input
+          type="hidden"
+          id="inscricao_numero"
+          name="numero_inscricao"
+          value="{{ String($json.inscricao ?? '').trim() }}"
         />
         <section class="card step-card" data-step-panel="0">
           <div class="card-header">
@@ -1950,11 +1956,18 @@
       const draftToast = document.getElementById('draftToast');
       const registrationNumberElement = document.getElementById('registrationNumber');
       const registrationValueElement = registrationNumberElement?.querySelector('.registration-value');
+      const registrationHiddenField = document.getElementById('inscricao_numero');
       const successScreen = document.getElementById('submissionSuccess');
       const successRegistrationNumber = document.getElementById('successRegistrationNumber');
       const alertModalElement = document.getElementById('alertModal');
       const alertModalMessage = document.getElementById('alertModalMessage');
       const alertModalInstance = alertModalElement ? new bootstrap.Modal(alertModalElement) : null;
+      const syncRegistrationNumber = () => {
+        if (!registrationHiddenField) return;
+        const value = registrationValueElement?.textContent?.trim();
+        registrationHiddenField.value = value && value !== '—' ? value : '';
+      };
+
       const showAlert = (message) => {
         if (alertModalMessage) {
           alertModalMessage.textContent = message;
@@ -2008,6 +2021,8 @@
       let cepController;
       const visitedSteps = new Set();
       const authorizationField = document.getElementById('initialAuthorization');
+
+      syncRegistrationNumber();
       const resolveInitialAuthorization = () => {
         const bodyAuth = document.body?.dataset?.authorization?.trim();
         const hiddenAuth = authorizationField?.value?.trim();
@@ -2083,6 +2098,7 @@
 
       const getAuthorizationValue = () => authorizationField?.value?.trim() || cachedAuthorization || resolveInitialAuthorization();
       const showSuccessFeedback = () => {
+        syncRegistrationNumber();
         const registrationText = registrationValueElement?.textContent?.trim();
         if (successRegistrationNumber && registrationText) {
           successRegistrationNumber.textContent = registrationText;
@@ -2314,7 +2330,8 @@
 
       const updatePCD = () => {
         const select = document.getElementById('is_pcd');
-        const isYes = select && select.value === 'Sim';
+        const selectedValue = (select?.value || select?.dataset.prefill || '').toString().trim().toUpperCase();
+        const isYes = selectedValue === 'SIM';
         const condicaoGroup = document.getElementById('condicaoEspecialGroup');
         const necessidadeGroup = document.getElementById('necessidadeGroup');
         const docsGroup = document.getElementById('pcdDocs');
@@ -2963,7 +2980,13 @@
       });
 
       document.getElementById('genero').addEventListener('change', updateGeneroOutro);
-      document.getElementById('sexo').addEventListener('change', updateMilitar);
+      const sexoSelect = document.getElementById('sexo');
+      if (sexoSelect) {
+        sexoSelect.addEventListener('change', () => {
+          updateMilitar();
+          updateGeneroOptions();
+        });
+      }
       document.querySelectorAll('input[name="jurado_funcao"]').forEach((input) => input.addEventListener('change', updateJurado));
       document.querySelectorAll('input[name="vinculo_publico_opcao"]').forEach((input) => input.addEventListener('change', updateVinculo));
       document.getElementById('is_pcd').addEventListener('change', updatePCD);
@@ -2999,6 +3022,7 @@
       void populateNacionalidades();
       radioPrefills();
       loadDraft();
+      syncRegistrationNumber();
       updateGeneroOptions();
       updateGeneroOutro();
       updateMilitar();
